--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "motionmcp": "./src/mcp-server.js"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "node src/index.js",
-    "mcp": "node src/mcp-server.js",
+    "build": "tsc",
+    "dev": "ts-node src/index.ts",
+    "mcp": "node dist/mcp-server.js",
+    "mcp:dev": "ts-node src/mcp-server.ts",
+    "watch": "tsc --watch",
+    "type-check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1",
     "worker:dev": "wrangler dev",
     "worker:deploy": "wrangler deploy"
@@ -25,5 +28,13 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.2.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
