--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "motionmcp",
   "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "bin": {
-    "motionmcp": "./src/mcp-server.js"
+    "motionmcp": "./dist/mcp-server.js"
   },
   "scripts": {
     "build": "tsc",
@@ -23,11 +23,13 @@
   "type": "commonjs",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.0",
+    "ajv": "^8.17.1",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
