feat: Complete task-1.1 - Implement hybrid tool consolidation strategy
- Add consolidated motion_projects and motion_tasks tools
- Implement MOTION_MCP_TOOLS configuration (minimal, essential, all, custom)
- Reduce tool count from 18 to configurable sets (3-20 tools)
- Keep legacy tools for backward compatibility
- Update documentation and .env.example

The consolidated tools combine CRUD operations by resource type:
- motion_projects: create, list, get, update, delete
- motion_tasks: create, list, get, update, delete, move, unassign

Default configuration is 'essential' with 6 tools total.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 MOTION_API_KEY=your_motion_api_key_here
 PORT=3000
 NODE_ENV=development
+
+# Tool configuration (optional)
+# Options: minimal, essential, all, custom:tool1,tool2
+# Default: essential
+# Examples:
+#   MOTION_MCP_TOOLS=minimal  # Only consolidated tools and workspaces
+#   MOTION_MCP_TOOLS=essential  # Consolidated tools plus search, context (default)
+#   MOTION_MCP_TOOLS=all  # All available tools
+#   MOTION_MCP_TOOLS=custom:motion_tasks,motion_projects,search_motion_content
+MOTION_MCP_TOOLS=essential
