--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MCP server for Motion API integration - manage projects, tasks, and workspaces from LLMs",
   "main": "dist/mcp-server.js",
   "bin": {
-    "motionmcp": "./dist/mcp-server.js"
+    "motionmcp": "dist/mcp-server.js"
   },
   "files": [
     "dist",
@@ -25,7 +25,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/devondragon/MotionMCP.git"
+    "url": "git+https://github.com/devondragon/MotionMCP.git"
   },
   "homepage": "https://github.com/devondragon/MotionMCP",
   "bugs": {
